lavf/matroskaenc: Do not needlessly allocate memory for cuepoints.

Fixes ticket #4690.